[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
requests = "2.31.0"
discord-py-self = "2.0.0"
discord = "^2.3.2"
asyncio = "3.4.3"
yikai-tools = "^1.0.6"
mmh3 = "^4.0.1"
orjson = "^3.9.5"
pynacl = "^1.5.0"
typing-extensions = "^4.7.1"
tzlocal = "^5.0.1"
xds-protos = "^0.0.11"
flask = "^2.3.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"